# chrono-to-ics

./: .gitignore  Cargo.toml  README.md  holidays.json  out.txt  timetable.ics~
.github/workflows/: rust.yml
src/: api.rs  gui.rs  ics.rs  lib.rs  main.rs
src/api/: client.rs  data.rs  mod.rs  responses.rs
